<resources>
    <string name="app_name" translatable="false">Natrium</string>
    <string name="version_display" translatable="false">Natrium v%1$s</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="privacy_policy_url" translatable="false">https://bananocoin.github.io/kalium/privacy.html</string>
    <string name="intro_welcome_title">Welcome to Natrium. To proceed, you may create a new wallet or import an existing one.</string>
    <string name="intro_welcome_new_wallet">New Wallet</string>
    <string name="intro_welcome_have_wallet">Import Wallet</string>
    <string name="intro_new_wallet_seed">Below is your wallet\'s seed. It is crucial that you back up your seed and never store it as plaintext or as a screenshot.</string>
    <string name="intro_new_wallet_seed_copied">Seed copied to clipboard.\n It is pasteable for 2 minutes.</string>
    <string name="intro_new_wallet_seed_header">Seed</string>
    <string name="intro_new_wallet_seed_backup_header">Backup your seed</string>
    <string name="intro_new_wallet_backup">Are you sure that you backed up your wallet seed?</string>
    <string name="intro_new_wallet_backup_yes">Yes</string>
    <string name="intro_new_wallet_backup_no">No</string>
    <string name="intro_new_wallet_warning_header">Please don\'t lie.</string>
    <string name="intro_new_wallet_warning">You think you won\'t but you\'ll lose it if you don\'t back it up.</string>
    <string name="intro_new_wallet_not_lying">Not lying!</string>
    <string name="intro_new_wallet_okay">Okay :(</string>
    <string name="intro_seed_header">Import seed</string>
    <string name="intro_seed_info">Please enter your seed below.</string>
    <string name="intro_seed_invalid">Seed is Invalid</string>
    <string name="pin_create_title">Create a 4-digit pin</string>
    <string name="pin_confirm_title">Confirm your pin</string>
    <string name="pin_enter_title">Enter pin</string>
    <string name="pin_confirm_error">Pins do not match</string>
    <string name="pin_error">Invalid pin entered</string>
    <string name="fingerprint_text">Touch sensor</string>
    <string name="home_send_cta">Send</string>
    <string name="home_receive_cta">Receive</string>
    <string name="home_explore_url" translatable="false">https://nanocrawler.cc/explorer/block/%s</string>
    <string name="account_explore_url" translatable="false">https://nanocrawler.cc/explorer/account/%s</string>
    <string name="error_message">There was a problem connecting. Please try again.</string>
    <string name="transaction_header">Transactions</string>
    <string name="history_sent">Sent</string>
    <string name="history_received">Received</string>
    <string name="transaction_details">View Details</string>
    <string name="example_card_intro">Welcome to Natrium. Once you receive NANO, transactions will show up like this:</string>
    <string name="example_card_little">A little</string>
    <string name="example_card_lot">A lot of</string>
    <string name="example_card_to">to someone</string>
    <string name="example_card_from">from someone</string>
    <string name="settings_title">Settings</string>
    <string name="settings_local_currency">Change Currency</string>
    <string name="settings_change_language">Language</string>
    <string name="settings_default_language_string">System Default</string>
    <string name="settings_backup_seed">Backup Seed</string>
    <string name="settings_change_rep">Change Representative</string>
    <string name="settings_share">Share Natrium</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_logout_alert_title">WARNING</string>
    <string name="settings_logout_alert_message">Logging out will remove your seed and all Natriun-related data from this device. If your seed is not backed up, you will never be able to access your funds again.</string>
    <string name="settings_logout_alert_confirm_cta">Delete seed and logout</string>
    <string name="settings_logout_alert_cancel_cta">Cancel</string>
    <string name="settings_logout_warning_title">Are you sure?</string>
    <string name="settings_logout_warning_message">As long as you\'ve backed up your seed you have nothing to worry about.</string>
    <string name="settings_logout_warning_confirm">Yes</string>
    <string name="settings_logout_warning_cancel">Cancel</string>
    <string name="settings_manage_header">Manage</string>
    <string name="settings_preferences_header">Preferences</string>
    <string name="settings_disable_fingerprint">Authentication Method</string>
    <string name="settings_fingerprint_method">Fingerprint</string>
    <string name="settings_pin_method">PIN</string>
    <string name="settings_privacy_policy"><u>Privacy Policy</u></string>
    <string name="change_representative_header">Change\nRepresentative</string>
    <string name="change_representative_header_short">Change</string>
    <string name="change_representative_info_header">What is a representative?</string>
    <string name="change_representative_info">A representative is an account that votes for network consensus. Voting power is weighted by balance, you may delegate your balance to increase the voting weight of a representative you trust. Your representative does not have spending power over your funds. You should choose a representative that has little downtime and is trustworthy.</string>
    <string name="change_representative_dialog_close">Close</string>
    <string name="change_representative_change">Change</string>
    <string name="change_representative_cancel">Cancel</string>
    <string name="change_representative_invalid">Invalid Representative Address</string>
    <string name="change_representative_current_header">Currently Represented By</string>
    <string name="change_representative_hint">Enter New Representative</string>
    <string name="change_representative_success">Representative Changed Successfully</string>
    <string name="change_representative_error">Failed to change representative. Try again later.</string>
    <string name="change_representative_fingerprint">Confirm fingerprint to change representative</string>
    <string name="change_representative_pin">Enter pin to change representative</string>
    <string name="share_title">Share via...</string>
    <string name="share_extra">Check out Natrium! The best NANO Mobile Wallet!</string>
    <string name="settings_show_seed">Backup Wallet Seed</string>
    <string name="settings_fingerprint_title">Confirm fingerprint to backup wallet seed.</string>
    <string name="settings_pin_title">Enter pin to view wallet seed.</string>
    <string name="receive_share_cta">Share</string>
    <string name="receive_copy_cta">Copy Address</string>
    <string name="receive_copied">Address Copied</string>
    <string name="receive_share_title">Share via…</string>
    <string name="receive_card_label_one" translatable="false">$NANO</string>
    <string name="receive_card_label_two" translatable="false">NANO.ORG</string>
    <string name="receive_card_title">Nano</string>
    <string name="receive_qrcode_description">QR Code</string>
    <string name="send_title">Send From:</string>
    <string name="send_address_hint">Enter Address</string>
    <string name="send_amount_hint">Enter Amount</string>
    <string name="send_max">Max</string>
    <string name="send_send_cta">Send</string>
    <string name="send_balance" translatable="false">(%s NANO)</string>
    <string name="send_sent">Sent</string>
    <string name="send_scan_qr">Scan QR Code</string>
    <string name="send_sending">Sending</string>
    <string name="send_to">To:</string>
    <string name="sent_to">Sent To:</string>
    <string name="send_alert_dialog_ok">OK</string>
    <string name="send_alert_dialog_title">Invalid Input</string>
    <string name="send_invalid_address">Address entered was invalid</string>
    <string name="send_insufficient_balance">Insufficient Balance</string>
    <string name="send_enter_address">Please enter an address</string>
    <string name="send_enter_amount">Please enter an amount</string>
    <string name="send_amount_error">Amount entered was invalid</string>
    <string name="send_generic_error">An error occurred. Try again later.</string>
    <string name="send_no_frontier">Couldn\'t find account frontier (account may not be open)</string>
    <string name="send_fingerprint_description">Confirm fingerprint to send %s Nano</string>
    <string name="send_pin_description">Send %s Nano?</string>
    <string name="contact_add">Add Contact</string>
    <string name="contact_added">%s has been added to contacts!</string>
    <string name="contact_invalid_name">Invalid Contact Name</string>
    <string name="contact_add_header">Add Contact:</string>
    <string name="contact_add_button">Add Contact</string>
    <string name="contact_name_hint">Enter a Name @</string>
    <string name="contact_name_missing">Choose a Name for this Contact</string>
    <string name="contact_name_exists">Contact Already Exists</string>
    <string name="contact_address_hint">Enter an Address</string>
    <string name="contact_address_exists">A Contact Already has that Address</string>
    <string name="contact_header">Contacts</string>
    <string name="contact_settings_item">Contacts</string>
    <string name="contact_view_header">Contact:</string>
    <string name="contact_remove_header">Remove:</string>
    <string name="contact_remove_btn">Remove Contact</string>
    <string name="contact_remove_sure">Are you sure you want to delete %s?</string>
    <string name="contact_removed">%s has been removed from contacts!</string>
    <string name="contact_export_none">There are no contacts to export</string>
    <string name="contact_export_error">Failed to export contacts</string>
    <string name="contact_import_error">Failed to import contacts</string>
    <string name="contact_import_success">Successfully imported %d contacts</string>
    <string name="contact_import_none">Found no contacts to import</string>
    <string name="contact_import_warning_header">Warning</string>
    <string name="contact_import_permission_error">Please allow Natrium permission to read from device storage.</string>
    <string name="contact_export_permission_error">Please allow Natrium permission to write to device storage.</string>
    <string name="contact_export_success">Contacts saved to %s</string>
    <string name="notifications_settings">Notifications</string>
    <string name="generic_on">On</string>
    <string name="generic_off">Off</string>
    <string name="notification_title">Received %s NANO</string>
    <string name="notification_body">Open Natrium to view this transaction.</string>
    <string name="notificaiton_header_suplement">Tap to open</string>
    <string name="settings_transfer">Load from Paper Wallet</string>
    <string name="transfer_error">An error has occurred during the transfer. Please try again later.</string>
    <string name="paper_wallet">Paper Wallet</string>
    <string name="kalium_wallet">Natrium Wallet</string>
    <string name="transfer_manual_entry">Manual Entry</string>
    <string name="mnemonic_phrase">Mnemonic Phrase</string>
    <string name="raw_seed">Raw Seed</string>
    <string name="transfer_header">Transfer\nFunds:</string>
    <string name="transfer_intro">This process will transfer the funds from a paper wallet to your Natrium wallet.\n\nTap the \"%s\" button to start.</string>
    <string name="transfer_confirm_info_first">A wallet with a balance of %s NANO has been detected.</string>
    <string name="transfer_confirm_info_second">Tap confirm to transfer the funds.</string>
    <string name="transfer_confirm_info_third">Transfer may take several seconds to complete.</string>
    <string name="transfer_loading_text">Transferring</string>
</resources>