<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/card_layout"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_share_card"
        android:padding="10dp"
        android:visibility="invisible"
        tools:visibility="visible">

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/receive_card_qr_bg"
                    android:layout_width="182dp"
                    android:layout_height="183dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/card_barcode_img"
                        android:layout_width="match_parent"
                        android:layout_height="87dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="23dp"
                        android:contentDescription="@string/receive_qrcode_description" />
                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/card_logo"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toEndOf="@+id/card_barcode"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/nunitosans_extralight"
            android:text="@string/receive_card_title"
            android:textAllCaps="true"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/card_logo"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage,UnusedAttribute" />

        <TextView
            android:id="@+id/card_address"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass_mono_light"
            android:lineSpacingExtra="1dp"
            android:lineSpacingMultiplier="1.1"
            android:textColor="@color/white_90"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/card_logo"
            app:layout_constraintTop_toBottomOf="@+id/card_logo"
            app:layout_constraintBottom_toTopOf="@+id/card_label_one"
            tools:ignore="SpUsage"
            tools:text="ban_3ugkt5gexef4ffotr839bwfrfux6pp1g7k8cbtk8ocnq99yc3pfdn11cr1ft" />

        <TextView
            android:id="@+id/card_label_one"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunitosans_light"
            android:text="@string/receive_card_label_one"
            android:textColor="@color/yellow"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/card_address"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/card_label_two"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunitosans_light"
            android:text="@string/receive_card_label_two"
            android:textColor="@color/yellow"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/card_address"
            tools:ignore="SpUsage" />

    </android.support.constraint.ConstraintLayout>
</layout>
